tests/snapshots/fix__reroutes_with_several_bends_when_one_detour_cannot_clear_the_obstacles-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="-100 -100 600 500">
        
      <g data-node="n00">
        <rect x="0" y="0" width="100" height="50"/>
        <text x="50" y="30" text-anchor="middle" font-size="14">n00</text>
      </g>
      <g data-node="n01">
        <rect x="150" y="0" width="100" height="50"/>
        <text x="200" y="30" text-anchor="middle" font-size="14">n01</text>
      </g>
      <g data-node="n02">
        <rect x="300" y="0" width="100" height="50"/>
        <text x="350" y="30" text-anchor="middle" font-size="14">n02</text>
      </g>
      <g data-node="n10">
        <rect x="0" y="100" width="100" height="50"/>
        <text x="50" y="130" text-anchor="middle" font-size="14">n10</text>
      </g>
      <g data-node="n11">
        <rect x="150" y="100" width="100" height="50"/>
        <text x="200" y="130" text-anchor="middle" font-size="14">n11</text>
      </g>
      <g data-node="n12">
        <rect x="300" y="100" width="100" height="50"/>
        <text x="350" y="130" text-anchor="middle" font-size="14">n12</text>
      </g>
      <g data-node="n20">
        <rect x="0" y="200" width="100" height="50"/>
        <text x="50" y="230" text-anchor="middle" font-size="14">n20</text>
      </g>
      <g data-node="n21">
        <rect x="150" y="200" width="100" height="50"/>
        <text x="200" y="230" text-anchor="middle" font-size="14">n21</text>
      </g>
      <g data-node="n22">
        <rect x="300" y="200" width="100" height="50"/>
        <text x="350" y="230" text-anchor="middle" font-size="14">n22</text>
      </g>
        <path id="flow" data-from="n20" data-to="n02" fill="none" d="M 50 200 L 50 175 L 267 175 L 267 25 L 300 25"/>
      </svg>
