tests/snapshots/fix__reroutes_with_several_bends_when_one_detour_cannot_clear_the_obstacles.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 3,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0
}
