tests/snapshots/fix__routes_connectors_inside_and_out_of_a_container.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 0.01,
  "remainingIssues": 0
}
