tests/snapshots/fix__separates_a_request_and_reply_drawn_on_the_same_line.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 0,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 2.5,
  "remainingIssues": 0
}
