tests/snapshots/fix__spreads_connectors_on_one_side_of_a_circle_each_ending_on_it.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 2,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "parallelDensity": 1.79,
  "remainingIssues": 0
}
