tests/snapshots/fix__trades_ports_on_a_side_so_two_connectors_leaving_it_do_not_cross-2.snap
---
source: tests/fix.rs
expression: result.svg.as_str()
---

      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 900">
        <g data-node="intake"><rect x="260" y="20" width="120" height="48"/><text x="320" y="49" text-anchor="middle" font-size="13">Intake</text></g>
        <g data-node="verify"><rect x="260" y="160" width="120" height="48"/><text x="320" y="189" text-anchor="middle" font-size="13">Verify</text></g>
        <g data-node="assess"><rect x="260" y="320" width="120" height="48"/><text x="320" y="349" text-anchor="middle" font-size="13">Assess</text></g>
        <g data-node="offer"><rect x="260" y="480" width="120" height="48"/><text x="320" y="509" text-anchor="middle" font-size="13">Offer</text></g>
        <g data-node="notify"><rect x="260" y="760" width="120" height="48"/><text x="320" y="789" text-anchor="middle" font-size="13">Notify</text></g>
        <g data-node="side"><rect x="440" y="20" width="120" height="48"/><text x="500" y="49" text-anchor="middle" font-size="13">Side</text></g>
        <path id="checks" data-from="intake" data-to="verify" d="M 320 68 L 320 160"/>
        <path id="scores" data-from="verify" data-to="assess" d="M 320 208 L 320 320"/>
        <path id="decision" data-from="assess" data-to="offer" d="M 320 368 L 320 480"/>
        <path id="details" data-from="offer" data-to="notify" d="M 320 528 L 320 760"/>
        <path id="aside" data-from="intake" data-to="side" d="M 380 44 L 440 44"/>
        <path id="terms" data-from="intake" data-to="offer" fill="none" d="M 260 52 L 236 52 L 236 504 L 260 504"/>
        <path id="receipt" data-from="intake" data-to="notify" fill="none" d="M 260 36 L 216 36 L 216 784 L 260 784"/>
      </svg>
