tests/snapshots/fix__trades_ports_on_a_side_so_two_connectors_leaving_it_do_not_cross.snap
---
source: tests/fix.rs
expression: "support :: quality_of(& result.report)"
---
{
  "bends": 4,
  "detachedLabels": 0,
  "diagonalSegments": 0,
  "remainingIssues": 0
}
